@@ -1,3 +1,13 @@
+2004-02-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	PR bootstrap/13617
+	* config/mips/mips-protos.h (mips_output_aligned_decl_common): Declare.
+	(mips_declare_object): Make variadic.
+	* config/mips/mips.h (ASM_OUTPUT_ALIGNED_DECL_COMMON): Use
+	mips_output_aligned_decl_common.
+	* config/mips/mips.c (mips_output_aligned_decl_common): New function.
+	(mips_declare_object): Make variadic.
+
 2004-02-12  Jan Hubicka  <jh@suse.cz>
 
 	* tree-optimize.c (tree_rest_of_compilation): Do not release DECL_ARGUMENTS
